Background Style Changes

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,6 +1,7 @@
 .contact-container {
     display: flex;
     background-image: url(/assets/stacked-steps-haikei.png);
+    background-attachment: fixed;
     background-size: cover;
     justify-content: space-around;
     align-self: center;
