--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,10 +1,12 @@
 .copyright {
-    background-color: #cc8dcc;
+    background-color: #d87093;
     padding: 10px 0;
-    border-top: 1px solid white;
+    border-top: 1px solid pink;
     p {
         display: flex;
         justify-content: center;
         font-weight: bold;
+        font-style: italic;
+        font-size: 15px;
     }
 }
