--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -22,13 +22,14 @@ body {
         }
     }
         header {
-            height: 80vh;
+            height: 85vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             background-image: url(/assets/stacked-steps-haikei.png);
             background-size: cover;
+            background-attachment: fixed;
         .container {
             display: flex;
             flex-direction: column;
@@ -48,6 +49,9 @@ body {
                 h2 {
                     font-family: 'Sacramento', cursive;
                     font-size: 95px;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: pink;
+                    color: transparent;
                 }
                 h3 {
                     margin: 0;
