--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,7 @@ p, li, button, label, a {
   display: -ms-flexbox;
   display: flex;
   background-image: url(/assets/stacked-steps-haikei.png);
+  background-attachment: fixed;
   background-size: cover;
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -151,9 +152,9 @@ p, li, button, label, a {
 }
 
 .copyright {
-  background-color: #cc8dcc;
+  background-color: #d87093;
   padding: 10px 0;
-  border-top: 1px solid white;
+  border-top: 1px solid pink;
 }
 .copyright p {
   display: -webkit-box;
@@ -163,6 +164,8 @@ p, li, button, label, a {
       -ms-flex-pack: center;
           justify-content: center;
   font-weight: bold;
+  font-style: italic;
+  font-size: 15px;
 }
 
 .gallery-container {
@@ -254,7 +257,7 @@ body .navigation ul li a:hover {
   font-weight: bold;
 }
 body header {
-  height: 80vh;
+  height: 85vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -270,6 +273,7 @@ body header {
           justify-content: center;
   background-image: url(/assets/stacked-steps-haikei.png);
   background-size: cover;
+  background-attachment: fixed;
 }
 body header .container {
   display: -webkit-box;
@@ -304,6 +308,9 @@ body header .container .title h1 {
 body header .container .title h2 {
   font-family: "Sacramento", cursive;
   font-size: 95px;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: pink;
+  color: transparent;
 }
 body header .container .title h3 {
   margin: 0;
