Hard code Images into Gallery and Text in About Us and Services

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    .established:hover {
+        stroke-width: 2px;
+        color: pink;
+        -webkit-text-stroke-color: black; 
+    }
     p {
         margin: 50px;
         color: white;
