--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,6 +166,7 @@ p, li, button, label, a {
   font-weight: bold;
   font-style: italic;
   font-size: 15px;
+  color: pink;
 }
 
 .gallery-container {
@@ -185,6 +186,11 @@ p, li, button, label, a {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
+}
+.gallery-container .gallery-title:hover {
+  stroke-width: 2px;
+  color: pink;
+  -webkit-text-stroke-color: black;
 }
 .gallery-container .gallery {
   display: -webkit-box;
@@ -215,6 +221,9 @@ p, li, button, label, a {
   -webkit-box-shadow: 5px 8px 10px rgb(0, 0, 0);
           box-shadow: 5px 8px 10px rgb(0, 0, 0);
 }
+.gallery-container .gallery ul li img:hover {
+  opacity: 90%;
+}
 .gallery-container .gallery-links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -226,7 +235,7 @@ p, li, button, label, a {
   text-decoration: none;
   padding: 5px 15px;
   background-color: #cc8dcc;
-  color: pink;
+  color: white;
   border: 1px solid pink;
   position: relative;
 }
@@ -250,7 +259,6 @@ body .navigation ul {
 body .navigation ul li a {
   text-decoration: none;
   color: white;
-  opacity: 50%;
 }
 body .navigation ul li a:hover {
   color: pink;
@@ -304,6 +312,7 @@ body header .container .title {
 body header .container .title h1 {
   margin: 0;
   text-align: center;
+  color: white;
 }
 body header .container .title h2 {
   font-family: "Sacramento", cursive;
@@ -320,7 +329,7 @@ body header .container .title a {
   text-decoration: none;
   padding: 5px 15px;
   background-color: #cc8dcc;
-  color: pink;
+  color: white;
   border: 1px solid pink;
   position: relative;
   top: 140px;
@@ -398,6 +407,11 @@ body header .container .outer {
   border-right: none;
   padding: 30px 0;
 }
+#services .service-container .service-text .service-title:hover {
+  stroke-width: 2px;
+  color: #d87093;
+  -webkit-text-stroke-color: black;
+}
 #services .service-container .service-text p {
   color: white;
   text-align: center;
@@ -406,7 +420,7 @@ body header .container .outer {
 #services .service-container .service-text a {
   text-decoration: none;
   padding: 5px 15px;
-  background-color: #cc8dcc;
+  background-color: white;
   color: pink;
   border: 1px solid white;
   position: relative;
@@ -434,6 +448,11 @@ body header .container .outer {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
+}
+.about-container .established:hover {
+  stroke-width: 2px;
+  color: pink;
+  -webkit-text-stroke-color: black;
 }
 .about-container p {
   margin: 50px;
