--- a/styles/sass/partials/_services.scss
+++ b/styles/sass/partials/_services.scss
@@ -11,7 +11,13 @@
         border: 1px solid black;
         background-color: pink;
         border-right: none;
-        padding: 30px 0;        
+        padding: 30px 0; 
+
+        .service-title:hover {
+            stroke-width: 2px;
+            color: #d87093;
+            -webkit-text-stroke-color: black;            
+        }      
         p {
             color: white;
             text-align: center;
@@ -21,7 +27,7 @@
         a {
             text-decoration: none;
             padding: 5px 15px;
-            background-color: #cc8dcc;
+            background-color: white;
             color: pink;    
             border: 1px solid white;  
             position: relative;    
