--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,13 +1,13 @@
 .copyright {
-    background-color: #d87093;
+    background-color: pink;
     padding: 10px 0;
-    border-top: 1px solid pink;
+    border-top: 1px solid white;
     p {
         display: flex;
         justify-content: center;
         font-weight: bold;
         font-style: italic;
         font-size: 15px;
-        color: pink;
+        color: white;
     }
 }
