--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -2,6 +2,14 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    background-image: url(/assets/brickwall.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+
+    h2 {
+        margin: 70px 0 0 0;
+    }
+
     .established:hover {
         stroke-width: 2px;
         color: pink;
@@ -10,5 +18,9 @@
     p {
         margin: 50px;
         color: white;
+        margin-bottom: 0 0 0 70px;
+        font-family: Bold;
+        text-transform: uppercase;
+        font-size: 20px;
     }
 }
