--- a/styles/sass/partials/_gallery.scss
+++ b/styles/sass/partials/_gallery.scss
@@ -1,10 +1,13 @@
 .gallery-container {
     display: flex;
     flex-direction: column;
+    background-image: url(/assets/brickwall.jpg);
+    background-size: cover;
+    background-attachment: fixed;
     .gallery-title {
         display: flex;
         justify-content: center;
-        margin-bottom: 50px;
+        margin: 70px 0;
     }
     .gallery-title:hover {
         stroke-width: 2px;
@@ -14,6 +17,7 @@
     .gallery {
         display: flex;
         flex-wrap: wrap;
+        padding: 30px 0;
         ul {
             display: flex;
             flex-wrap: wrap;
@@ -25,7 +29,7 @@
                 
                 img {
                     width: 80%;
-                    box-shadow: 5px 8px 10px rgb(0, 0, 0);
+                    box-shadow: 5px 8px 10px white;
                 }
                 img:hover {
                     opacity: 90%;
@@ -36,11 +40,12 @@
     .gallery-links {
         display: flex;
         justify-content: space-around;
+        margin: 70px 0;
         a {
             text-decoration: none;
             padding: 5px 15px;
-            background-color: #cc8dcc;
-            color: white;    
+            background-color: white;
+            color: pink;    
             border: 1px solid pink;  
             position: relative;             
             }
