--- a/styles/sass/partials/_hours.scss
+++ b/styles/sass/partials/_hours.scss
@@ -6,14 +6,18 @@
         text-align: center;
         width: 50%;
         border: 1px solid black;
-        background-color: pink;
+        background-image: url(/assets/blurry-gradient-haikei2.png);
         padding: 20px;
         h2 {
             margin: 10px 0;
+            color: white;
         }
         p {
             margin: 20px 0;
             color: white;
+            font-family: Bold;
+            text-transform: uppercase;
+            font-size: 20px;
         }
     }
     .map {
