--- a/styles/sass/partials/_services.scss
+++ b/styles/sass/partials/_services.scss
@@ -9,9 +9,10 @@
         justify-content: space-around;
         align-items: center;
         border: 1px solid black;
-        background-color: pink;
+        background-image: url(/assets/blurry-gradient-haikei2.png);
         border-right: none;
         padding: 30px 0; 
+        color: white;
 
         .service-title:hover {
             stroke-width: 2px;
@@ -22,6 +23,9 @@
             color: white;
             text-align: center;
             margin: 0 60px;
+            font-family: Bold;
+            text-transform: uppercase;
+            font-size: 20px;
         }
 
         a {
