Hamburger Menu Added and Trying less Pink

--- a/styles/sass/partials/_basestyles.scss
+++ b/styles/sass/partials/_basestyles.scss
@@ -32,6 +32,7 @@ p, li, button, label, a {
     font-family: 'Maitree', serif;
     font-size: 20px;
     font-weight: bolder;
+    line-height: 40px;
 }
 
 @font-face {
