--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,6 +1,6 @@
 .contact-container {
     display: flex;
-    background-image: url(/assets/blurry-gradient-haikei2.png);
+    background-image: url(/assets/blurry-gradient-haikei5.png);
     background-attachment: fixed;
     background-size: cover;
     justify-content: space-around;
@@ -14,7 +14,7 @@
             align-items: center;
             box-shadow: 5px 10px #000000;
             border: 1px solid black;
-            background-color: pink;
+            background-color: rgb(233, 233, 233);
             margin: 50px;
         }
    
@@ -27,7 +27,7 @@
             justify-content: center;
             box-shadow: 5px 10px #000000;
             border: 1px solid black;
-            background-color: pink;
+            background-color: rgb(233, 233, 233);
             margin: 50px;
             padding: 50px 20px;
             
