--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 .copyright {
-    background-color: pink;
+    background-color: rgb(233, 233, 233);
     padding: 10px 0;
     border-top: 1px solid white;
     p {
@@ -8,6 +8,6 @@
         font-weight: bold;
         font-style: italic;
         font-size: 15px;
-        color: white;
+        color: black;
     }
 }
