--- a/styles/sass/partials/_gallery.scss
+++ b/styles/sass/partials/_gallery.scss
@@ -8,6 +8,7 @@
         display: flex;
         justify-content: center;
         margin: 70px 0;
+        color: white;
     }
     .gallery-title:hover {
         stroke-width: 2px;
@@ -45,7 +46,7 @@
             text-decoration: none;
             padding: 5px 15px;
             background-color: white;
-            color: pink;    
+            color: black;    
             border: 1px solid pink;  
             position: relative;             
             }
