--- a/styles/sass/partials/_hours.scss
+++ b/styles/sass/partials/_hours.scss
@@ -6,15 +6,15 @@
         text-align: center;
         width: 50%;
         border: 1px solid black;
-        background-image: url(/assets/blurry-gradient-haikei2.png);
+        background-image: url(/assets/blurry-gradient-haikei5.png);
         padding: 20px;
         h2 {
             margin: 10px 0;
-            color: white;
+            color: black;
         }
         p {
             margin: 20px 0;
-            color: white;
+            color: black;
             font-family: Bold;
             text-transform: uppercase;
             font-size: 20px;
