Style Changes before Client Review

--- a/styles/sass/partials/_basestyles.scss
+++ b/styles/sass/partials/_basestyles.scss
@@ -33,6 +33,7 @@ p, li, button, label, a {
     font-size: 20px;
     font-weight: bolder;
     line-height: 40px;
+    text-shadow: 2px 2px 5px white;
 }
 
 @font-face {
