--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -8,7 +8,7 @@
 
     h2 {
         margin: 70px 0 0 0;
-        color: white;
+        color: black;
     }
 
     .established:hover {
@@ -23,5 +23,7 @@
         font-family: Bold;
         text-transform: uppercase;
         font-size: 20px;
+        -webkit-text-stroke-color: black;
+        -webkit-text-stroke-width: 1px;
     }
 }
