--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,7 +1,6 @@
 .contact-container {
     display: flex;
-    background-image: url(/assets/blurry-gradient-haikei5.png);
-    background-attachment: fixed;
+    background-image: url(/assets/blurry-gradient-haikei7.png);
     background-size: cover;
     justify-content: space-around;
     align-self: center;
@@ -56,7 +55,7 @@
                 label {
                     padding: 0 10px;
                     margin-top: 20px;
-                    color: white;
+                    color: black;
 
                 }
                 textarea {
@@ -66,6 +65,7 @@
                     width: 100%;
                     height: 200px;
                     padding: 0px 0px;
+                    font-family: 'Maitree', serif;
                 } 
                 button {
                     width: 100%;
