--- a/styles/sass/partials/_hours.scss
+++ b/styles/sass/partials/_hours.scss
@@ -6,11 +6,12 @@
         text-align: center;
         width: 50%;
         border: 1px solid black;
-        background-image: url(/assets/blurry-gradient-haikei5.png);
+        background-image: url(/assets/blurry-gradient-haikei6.png);
         padding: 20px;
         h2 {
             margin: 10px 0;
             color: black;
+            text-shadow: 2px 2px 5px white;
         }
         p {
             margin: 20px 0;
@@ -18,6 +19,8 @@
             font-family: Bold;
             text-transform: uppercase;
             font-size: 20px;
+            -webkit-text-stroke-color: white;
+            -webkit-text-stroke-width: 1px;
         }
     }
     .map {
