--- a/styles/sass/partials/_services.scss
+++ b/styles/sass/partials/_services.scss
@@ -14,7 +14,7 @@
         border-right: none;
         padding: 30px 0; 
         color: black;
-
+        
         .service-title:hover {
             stroke-width: 2px;
             color: #d87093;
@@ -27,6 +27,8 @@
             font-family: Bold;
             text-transform: uppercase;
             font-size: 20px;
+            -webkit-text-stroke-color: white;
+            -webkit-text-stroke-width: 1px;
         }
 
         a {
@@ -41,6 +43,8 @@
         a:hover {
             background-color: #d87093;
             text-transform: uppercase;
+            color: pink;
+            text-shadow: none;
         }
 
     }
