Add Policies to Page

--- a/styles/sass/partials/_gallery.scss
+++ b/styles/sass/partials/_gallery.scss
@@ -9,6 +9,9 @@
         justify-content: center;
         margin: 70px 0;
         color: black;
+        h2 {
+            font-size: 38px;
+        }
     }
     .gallery-title:hover {
         stroke-width: 2px;
