--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -7,8 +7,9 @@
     background-attachment: fixed;
 
     h2 {
-        margin: 70px 0 0 0;
+        margin: 70px 0 40px 0;
         color: black;
+        font-size: 38px;
     }
 
     .established:hover {
@@ -25,5 +26,12 @@
         font-size: 20px;
         -webkit-text-stroke-color: black;
         -webkit-text-stroke-width: 1px;
+        margin-top: 0;
+    }
+
+    .about-me {
+        h3 {
+            color: white;
+        }
     }
 }
