Style Policy section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -593,7 +593,29 @@ body header .container .outer {
   -webkit-text-stroke-width: 1px;
   margin-top: 0;
 }
-.about-container .about-me h3 {
+.about-container .about-me {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.about-container .about-me .policies {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.about-container .about-me .policies h3 {
   color: white;
   text-shadow: 2px 2px 5px white;
+}
+.about-container .about-me .policies p {
+  color: black;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
 }
