--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -30,9 +30,23 @@
     }
 
     .about-me {
-        h3 {
+        display: flex;
+        flex-wrap: wrap;
+        .policies {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            
+            h3 {
             color: white;
             text-shadow: 2px 2px 5px white;
+            }
+            p {
+                color: black;
+                -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: white;
+            }
         }
+        
     }
 }
